<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_check_in_out"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg">

    <RelativeLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/menuIV"
            android:onClick="showPopup"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FingerPrint"
            android:textSize="22sp"
            android:layout_centerInParent="true"
            android:textColor="#fff"
            />
        <!--<ImageView-->
            <!--android:id="@+id/notification"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:src="@drawable/ic_notification"-->
            <!--android:layout_alignParentRight="true"-->
            <!--/>-->
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#72ffffff"
        android:layout_below="@+id/bar"
        android:layout_marginBottom="20dp"
        />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/stroke_white"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/name"
            android:textColor="#fff"
            android:textSize="12dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/check_in"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/stroke_white"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/address"
            android:textColor="#fff"
            android:textSize="12dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/check_out"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/stroke_white"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/birthday"
            android:textColor="#fff"
            android:textSize="12dp"
            android:textStyle="bold" />


    </TableRow>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/namesRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
