<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_check_in_out"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg">

    <RelativeLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FingerPrint"
            android:textSize="22sp"
            android:layout_centerInParent="true"
            android:textColor="#fff"
            />

        <ImageView
            android:id="@+id/menuIV"
            android:onClick="showPopup"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu"/>
        <!--<ImageView-->
            <!--android:id="@+id/notification"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:src="@drawable/ic_notification"-->
            <!--android:layout_alignParentRight="true"-->
            <!--/>-->
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#72ffffff"
        android:layout_below="@+id/bar"
        android:layout_marginBottom="20dp"
        />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/displayLinear"
        android:orientation="vertical" >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <TextView
                android:id="@+id/date"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="#fff"
                android:background="@drawable/stroke_white"
                android:layout_height="match_parent"
                android:textSize="12dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/date"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/check_in"
                android:gravity="center"
                android:background="@drawable/stroke_white"
                android:layout_width="0dp"
                android:textColor="#fff"
                android:layout_weight="1"
                android:text="@string/check_in"
                android:layout_height="match_parent"
                android:textSize="12dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:textStyle="bold"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                />

            <TextView
                android:id="@+id/check_out"
                android:gravity="center"
                android:layout_width="0dp"
                android:text="@string/check_out"
                android:layout_weight="1"
                android:background="@drawable/stroke_white"
                android:layout_height="match_parent"
                android:textSize="12dp"
                android:textColor="#fff"
                android:textStyle="bold"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                />


        </TableRow>
    </TableLayout>
            </LinearLayout>
    </ScrollView>
</LinearLayout>
